Added the majority of the new C#8 features.

--- a/CSharp8Features.csproj
+++ b/CSharp8Features.csproj
@@ -6,4 +6,9 @@
     <Nullable>Enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove=".gitattributes" />
+    <None Remove=".gitignore" />
+  </ItemGroup>
+
 </Project>
